url test, urlBuilder 수정 및 weather 도메인 모델로 변경테스트